--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "wtc-sticker-book",
-  "version": "1.0.0",
+  "version": "1.0.8",
   "description": "Stickerbook is a pixi application that provides 2D scene layout functionality.",
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src/index.js --presets @babel/preset-env --out-dir dist",
+    "build": "babel src --presets @babel/preset-env --out-dir dist",
     "build-es5": "npx webpack --config webpack.config.js",
-    "prepublish": "npm run build && npm run build-es5"
+    "prepare": "npm run build && npm run build-es5"
   },
   "repository": "git@github.com:wethegit/wtc-sticker-book.git",
   "author": "Liam Egan <liam@wethecollective.com>",
@@ -14,11 +14,13 @@
   "private": false,
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
-    "pixi.js": "^4.8.2"
+    "pixi.js": "^4.8.2",
+    "wolfy87-eventemitter": "^5.2.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "babel-loader": "^8.0.5",
     "jsdoc": "^3.5.5",
