--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wtc-sticker-book",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "Stickerbook is a pixi application that provides 2D scene layout functionality.",
   "main": "dist/index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "private": false,
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
+    "pepjs": "^0.5.0",
     "pixi.js": "^4.8.2",
     "wolfy87-eventemitter": "^5.2.6"
   },
